<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.add.AddActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/add"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:titleCentered="true"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/preview_iv"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:src="@drawable/ic_place_holder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/preview_iv" />

        <TextView
            android:id="@+id/location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toTopOf="@+id/description_ed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/preview_iv" />

        <EditText
            android:id="@+id/description_ed"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/custom_input"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/describe_this_photo"
            android:paddingHorizontal="20dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/open_gallery_btn"
            app:layout_constraintStart_toStartOf="@+id/open_gallery_btn"
            app:layout_constraintTop_toBottomOf="@+id/preview_iv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/take_photo_btn"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="20dp"
            app:icon="@drawable/ic_camera"
            app:iconTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_ed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/open_gallery_btn"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:icon="@drawable/ic_photo_library"
            app:iconTint="@color/white"
            app:layout_constraintStart_toEndOf="@id/take_photo_btn"
            app:layout_constraintTop_toBottomOf="@+id/description_ed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/my_location_btn"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:icon="@drawable/ic_my_location"
            app:iconTint="@color/white"
            app:layout_constraintStart_toEndOf="@id/open_gallery_btn"
            app:layout_constraintTop_toBottomOf="@+id/description_ed" />

        <Button
            android:id="@+id/upload_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/upload"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_ed" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>